style: adjust footer layout for responsive design

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,3 +16,8 @@
     @apply transition-colors duration-200 ease-in-out;
   }
 }
+@layer utilities {
+  a:not(.no-hover-style):hover {
+    @apply text-green-600;
+  }
+}
